# dmidecode

./: .gitignore  CMakeLists.txt  config.h  dmidecode.c  util.c  winsmbios.c  winsmbios.h
res/: dmidecode.rc
